Teste para Loja de Carros (Locadora)

--- a/Node/primeiro/View/home.ejs
+++ b/Node/primeiro/View/home.ejs
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
-       <h1>Teste de EJS</h1>
+       <h1>Salve Salve Familia</h1>
         <script src="" async defer></script>
     </body>
 </html>
