Ajuste de Nome de Funcoes
so ajuste para arrumar o nome da funcao que tava em portugues e deixei tudo em ingles para melhor leitura

--- a/Locadora/Locadora/Views/Carros/Create.cshtml
+++ b/Locadora/Locadora/Views/Carros/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Locadora.Models.Carro
 
 @{
-    ViewData["Title"] = "Criar";
+    ViewData["Title"] = "Create";
 }
 
 <h1>Criar</h1>
@@ -45,7 +45,7 @@
 </div>
 
 <div>
-    <a asp-action="Detalhes" >Detalhes</a>
+    <a asp-action="Details" >Detalhes</a>
     <a asp-action="Index">Home</a>
 </div>
 
