--- a/Locadora/Locadora/Views/Carros/Details.cshtml
+++ b/Locadora/Locadora/Views/Carros/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Locadora.Models.Carro
 
 @{
-    ViewData["Title"] = "Detalhes";
+    ViewData["Title"] = "Details";
 }
 
 <h1>Detalhes Carro</h1>
@@ -46,7 +46,7 @@
 </div>
 
 <div>
-    <a asp-action="Editar" asp-route-id="@Model.id"> Editar </a>
+    <a asp-action="Edit" asp-route-id="@Model.id"> Editar </a>
     <a asp-action="Index"> Voltar </a>
 </div>
 
