--- a/Locadora/Locadora/Views/Carros/Edit.cshtml
+++ b/Locadora/Locadora/Views/Carros/Edit.cshtml
@@ -1,19 +1,8 @@
 ﻿@model Locadora.Models.Carro
 
 @{
-    ViewData["Title"] = "Editar";
+    ViewData["Title"] = "Edit";
 }
-<script>
-
-    $(document).ready(function(){
-        $("#submit").on("click",function()
-          {
-            alert('Your Message');
-        });
-    });
-
-</script>
-
 
 <h1>Editar</h1>
 
@@ -49,25 +38,14 @@
                 <span class="text-danger"></span>
             </div>
             <div class="form-group">
-                @using (Html.BeginForm("Update", "Carro", FormMethod.Post))
-                {
                     <input type="submit" value="Save" class="btn btn-primary" />
-                }
-                @if (ViewBag.Message != null)
-                {
-                <script type="text/javascript">
-                    window.onload = function () {
-                        alert("@ViewBag.Message");
-                    };
-                </script>
-                }
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Detalhes" >Detalhes</a>
+    <a asp-action="Details" >Detalhes</a>
     <a asp-action="Index">Home</a>
 </div>
 
